[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/StarfieldTab.gd" type="Script" id=1]

[node name="Starfield" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 527.0
margin_top = 406.0
margin_right = 964.0
margin_bottom = 558.0

[node name="TypeGrid" type="GridContainer" parent="VBox"]
margin_right = 437.0
margin_bottom = 98.0
columns = 4

[node name="Block Rect" type="ReferenceRect" parent="VBox/TypeGrid"]
margin_right = 51.0
margin_bottom = 14.0

[node name="Texture" type="Label" parent="VBox/TypeGrid"]
margin_left = 55.0
margin_right = 205.0
margin_bottom = 14.0
text = " Texture "
align = 1

[node name="Color" type="Label" parent="VBox/TypeGrid"]
margin_left = 209.0
margin_right = 359.0
margin_bottom = 14.0
text = " Color "
align = 1

[node name="Count" type="Label" parent="VBox/TypeGrid"]
margin_left = 363.0
margin_right = 437.0
margin_bottom = 14.0
text = " Count "
align = 1

[node name="TypeALabel" type="Label" parent="VBox/TypeGrid"]
margin_top = 23.0
margin_right = 51.0
margin_bottom = 37.0
text = " Type A "
align = 1

[node name="OptionButtonA" type="OptionButton" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 55.0
margin_top = 18.0
margin_right = 205.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Dot"

[node name="ColorPickerButtonA" type="ColorPickerButton" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 209.0
margin_top = 18.0
margin_right = 359.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="TypeASpinBox" type="SpinBox" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 363.0
margin_top = 18.0
margin_right = 437.0
margin_bottom = 42.0
max_value = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeBLabel" type="Label" parent="VBox/TypeGrid"]
margin_top = 51.0
margin_right = 51.0
margin_bottom = 65.0
text = " Type B "
align = 1

[node name="OptionButtonB" type="OptionButton" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 55.0
margin_top = 46.0
margin_right = 205.0
margin_bottom = 70.0
size_flags_horizontal = 3
text = "Dot"

[node name="ColorPickerButtonB" type="ColorPickerButton" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 209.0
margin_top = 46.0
margin_right = 359.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="TypeBSpinBox" type="SpinBox" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 363.0
margin_top = 46.0
margin_right = 437.0
margin_bottom = 70.0
max_value = 1000.0

[node name="TypeCLabel" type="Label" parent="VBox/TypeGrid"]
margin_top = 79.0
margin_right = 51.0
margin_bottom = 93.0
text = " Type C "
align = 1

[node name="OptionButtonC" type="OptionButton" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 55.0
margin_top = 74.0
margin_right = 205.0
margin_bottom = 98.0
size_flags_horizontal = 3
text = "Dot"

[node name="ColorPickerButtonC" type="ColorPickerButton" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 209.0
margin_top = 74.0
margin_right = 359.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="TypeCSpinBox" type="SpinBox" parent="VBox/TypeGrid"]
unique_name_in_owner = true
margin_left = 363.0
margin_top = 74.0
margin_right = 437.0
margin_bottom = 98.0
max_value = 1000.0

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 102.0
margin_right = 437.0
margin_bottom = 106.0

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 110.0
margin_right = 437.0
margin_bottom = 152.0

[node name="Height" type="VBoxContainer" parent="VBox/HBox"]
margin_right = 98.0
margin_bottom = 42.0

[node name="HeightLabel" type="Label" parent="VBox/HBox/Height"]
margin_right = 98.0
margin_bottom = 14.0
text = "Starfield Height"
align = 1

[node name="HeightSpinBox" type="SpinBox" parent="VBox/HBox/Height"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 98.0
margin_bottom = 42.0
max_value = 40.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="VBox/HBox"]
margin_left = 102.0
margin_right = 106.0
margin_bottom = 42.0

[node name="Mean" type="VBoxContainer" parent="VBox/HBox"]
margin_left = 110.0
margin_right = 210.0
margin_bottom = 42.0

[node name="MeanLabel" type="Label" parent="VBox/HBox/Mean"]
margin_right = 100.0
margin_bottom = 14.0
text = "Star Scale Mean"
align = 1

[node name="MeanSpinBox" type="SpinBox" parent="VBox/HBox/Mean"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 100.0
margin_bottom = 42.0
max_value = 6.0
step = 0.005

[node name="VSeparator3" type="VSeparator" parent="VBox/HBox"]
margin_left = 214.0
margin_right = 218.0
margin_bottom = 42.0

[node name="Variance" type="VBoxContainer" parent="VBox/HBox"]
margin_left = 222.0
margin_right = 341.0
margin_bottom = 42.0

[node name="VarianceLabel" type="Label" parent="VBox/HBox/Variance"]
margin_right = 119.0
margin_bottom = 14.0
text = "Star Scale Variance"
align = 1

[node name="VarianceSpinBox" type="SpinBox" parent="VBox/HBox/Variance"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 119.0
margin_bottom = 42.0
max_value = 3.0
step = 0.005

[node name="VSeparator4" type="VSeparator" parent="VBox/HBox"]
margin_left = 345.0
margin_right = 349.0
margin_bottom = 42.0

[node name="RegenerateButton" type="Button" parent="VBox/HBox"]
margin_left = 353.0
margin_top = 11.0
margin_right = 437.0
margin_bottom = 31.0
size_flags_vertical = 4
text = "Regenerate"

[connection signal="item_selected" from="VBox/TypeGrid/OptionButtonA" to="." method="_on_OptionButtonA_item_selected"]
[connection signal="color_changed" from="VBox/TypeGrid/ColorPickerButtonA" to="." method="_on_ColorPickerButtonA_color_changed"]
[connection signal="value_changed" from="VBox/TypeGrid/TypeASpinBox" to="." method="_on_TypeASpinBox_value_changed"]
[connection signal="item_selected" from="VBox/TypeGrid/OptionButtonB" to="." method="_on_OptionButtonB_item_selected"]
[connection signal="color_changed" from="VBox/TypeGrid/ColorPickerButtonB" to="." method="_on_ColorPickerButtonB_color_changed"]
[connection signal="value_changed" from="VBox/TypeGrid/TypeBSpinBox" to="." method="_on_TypeBSpinBox_value_changed"]
[connection signal="item_selected" from="VBox/TypeGrid/OptionButtonC" to="." method="_on_OptionButtonC_item_selected"]
[connection signal="color_changed" from="VBox/TypeGrid/ColorPickerButtonC" to="." method="_on_ColorPickerButtonC_color_changed"]
[connection signal="value_changed" from="VBox/TypeGrid/TypeCSpinBox" to="." method="_on_TypeCSpinBox_value_changed"]
[connection signal="value_changed" from="VBox/HBox/Height/HeightSpinBox" to="." method="_on_HeightSpinBox_value_changed"]
[connection signal="value_changed" from="VBox/HBox/Mean/MeanSpinBox" to="." method="_on_MeanSpinBox_value_changed"]
[connection signal="value_changed" from="VBox/HBox/Variance/VarianceSpinBox" to="." method="_on_VarianceSpinBox_value_changed"]
[connection signal="pressed" from="VBox/HBox/RegenerateButton" to="." method="_on_RegenerateButton_pressed"]
